2009-01-17  Michal Ludvig  <michal@logix.cz>

	* S3/CloudFront.py: Initial support for creating new Distros,
	  implemented parser for ListAllDists response.
	* s3cmd: enabled 'cfcreate' command.

2009-01-17  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py: Added getDictFromTree() and appendXmlTextNode()
	* S3/S3Uri.py: Added some convenience methods to S3UriS3() 

2009-01-16  Michal Ludvig  <michal@logix.cz>

	* S3/CloudFront.py: New module for CloudFront support.
	* s3cmd, S3/Config.py, S3/Exceptions.py: Wire in CF support.

2009-01-13  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated.
	* s3cmd: renamed (fetch_)remote_keys to remote_list and
	  a few other renames for consistency.

2009-01-08  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Some errors during file upload were incorrectly 
	  interpreted as MD5 mismatch. (bug #2384990)
	* S3/ACL.py: Move attributes from class to instance.
	* run-tests.py: Tests for ACL.
	* s3cmd: Minor messages changes.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: New command 'setacl'.
	* S3/S3.py: Implemented set_acl().
	* S3/ACL.py: Fill in <Owner/> tag in ACL XML.
	* NEWS: Info about 'setacl'.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Factored remote_keys generation from cmd_object_get()
	  to fetch_remote_keys().
	* s3cmd: Display Public URL in 'info' for AnonRead objects.
	* S3/ACL.py: Generate XML from a current list of Grantees

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* S3/ACL.py: Keep ACL internally as a list of of 'Grantee' objects.
	* S3/Utils.py: Fix crash in stripNameSpace() when the XML has no NS.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* S3/ACL.py: New object for handling ACL issues.
	* S3/S3.py: Moved most of S3.get_acl() to ACL class.
	* S3/Utils.py: Reworked XML helpers - remove XMLNS before 
	  parsing the input XML to avoid having all Tags prefixed
	  with {XMLNS} by ElementTree.

2009-01-03  Michal Ludvig  <michal@logix.cz>
