@@ -90,6 +90,29 @@ class S3UriS3(S3Uri):
 	def compose_uri(bucket, object = ""):
 		return "s3://%s/%s" % (bucket, object)
 
+	@staticmethod
+	def httpurl_to_s3uri(http_url):
+		m=re.match("(https?://)?([^/]+)/?(.*)", http_url, re.IGNORECASE)
+		hostname, object = m.groups()[1:]
+		hostname = hostname.lower()
+		if hostname == "s3.amazonaws.com":
+			## old-style url: http://s3.amazonaws.com/bucket/object
+			if object.count("/") == 0:
+				## no object given
+				bucket = object
+				object = ""
+			else:
+				## bucket/object
+				bucket, object = object.split("/", 1)
+		elif hostname.endswith(".s3.amazonaws.com"):
+			## new-style url: http://bucket.s3.amazonaws.com/object
+			bucket = hostname[:-(len(".s3.amazonaws.com"))]
+		else:
+			raise ValueError("Unable to parse URL: %s" % http_url)
+		return S3Uri("s3://%(bucket)s/%(object)s" % { 
+			'bucket' : bucket,
+			'object' : object })
+
 class S3UriS3FS(S3Uri):
 	type = "s3fs"
 	_re = re.compile("^s3fs://([^/]*)/?(.*)", re.IGNORECASE)
@@ -126,6 +149,22 @@ class S3UriFile(S3Uri):
 	def uri(self):
 		return "/".join(["file:/", self.path()])
 
+class S3UriCloudFront(S3Uri):
+	type = "cf"
+	_re = re.compile("^cf://([^/]*)/?", re.IGNORECASE)
+	def __init__(self, string):
+		match = self._re.match(string)
+		if not match:
+			raise ValueError("%s: not a CloudFront URI" % string)
+		groups = match.groups()
+		self._dist_id = groups[0]
+
+	def dist_id(self):
+		return self._dist_id
+
+	def uri(self):
+		return "/".join(["cf:/", self.dist_id()])
+
 if __name__ == "__main__":
 	uri = S3Uri("s3://bucket/object")
 	print "type()  =", type(uri)
@@ -155,3 +194,11 @@ if __name__ == "__main__":
 	print "uri.type=", uri.type
 	print "path    =", uri.path()
 	print
+
+	uri = S3Uri("cf://1234567890ABCD/")
+	print "type()  =", type(uri)
+	print "uri     =", uri
+	print "uri.type=", uri.type
+	print "dist_id =", uri.dist_id()
+	print
+
